Java 17, bump deps, add more common libs